# udemy.shima.lang-chain

./: Dockerfile  README.md  compose.yml  run.sh
app/: gptapi-basic.py  init.py  langchain.py  requirements.txt
app/docs/: sample-docs.md
app/main/: agents.py  chains.py  openai-api.py  output-parsers.py
chatbot-app/: .gitignore  Dockerfile  README.md  compose.yml
chatbot-app/app/: .env.example  pyproject.toml
chatbot-app/app/src/: chatbot_engine.py  interface.py  main.py
intro/: Dockerfile  README.md  compose.yml
intro/app/: init.py  requirements.txt
intro/app/main/: indexes.py  llms.py  memory.py  models.py  models_role.py  openai-api.py  output-parsers.py  prompts.py
slackbot-app/: .gitignore  Dockerfile  Makefile  README.md  compose.yml
slackbot-app/app/: .dockerignore  .env.example  pyproject.toml
slackbot-app/app/src/: chatbot_engine.py  interface.py  main.py
