[tool.poetry]
name = "udemy-shima-langchain-chatbot-app"
version = "0.1.0"
description = ""
authors = ["argon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
slack-bolt = "1.18.0"
pydantic = "1.10.7"
python-dotenv = "1.0.0"
langchain = "0.0.172"
openai = "0.27.6"
unstructured = "0.6.6"
tabulate = "0.9.0"
pdf2image = "1.16.3"
pytesseract = "0.3.10"
chromadb = "0.3.23"
tiktoken = "0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
